Working index. Revise for ride.tsx for dynamic pricing based on Fare Matrix & Station Selection

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.10",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -32,6 +33,7 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
+    "haversine": "^1.1.1",
     "next": "^15.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/firebase": "^2.4.32",
+    "@types/haversine": "^1.1.8",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
