--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.anonymous.TravelJuan"
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.TravelJuanFinalVersion"
     },
     "web": {
       "bundler": "metro",
