--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^18.0.0",
+    "@types/babel__generator": "^7.27.0",
     "@types/haversine": "^1.1.8",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
